@@ -111,11 +111,12 @@ Frame = include                # Psana::Camera::FrameV1
 FrameFccd = include            # Psana::Camera::FrameFccdConfigV1
 FrameFex = include             # Psana::Camera::FrameFexConfigV1
 GMD = include                  # Psana::Bld::BldDataGMDV0, Psana::Bld::BldDataGMDV1, Psana::Bld::BldDataGMDV2
+GenericPgp = include           # Psana::GenericPgp::ConfigV1
 Gsc16ai = include              # Psana::Gsc16ai::ConfigV1, Psana::Gsc16ai::DataV1
 Imp = include                  # Psana::Imp::ConfigV1, Psana::Imp::ElementV1
 Ipimb = include                # Psana::Ipimb::ConfigV1, Psana::Ipimb::ConfigV2, Psana::Ipimb::DataV1, Psana::Ipimb::DataV2
 IpmFex = include               # Psana::Lusi::IpmFexConfigV1, Psana::Lusi::IpmFexConfigV2, Psana::Lusi::IpmFexV1
-L3T = include                  # Psana::L3T::ConfigV1, Psana::L3T::DataV1
+L3T = include                  # Psana::L3T::ConfigV1, Psana::L3T::DataV1, Psana::L3T::DataV2
 OceanOptics = include          # Psana::OceanOptics::ConfigV1, Psana::OceanOptics::ConfigV2, Psana::OceanOptics::DataV1, Psana::OceanOptics::DataV2
 Opal1k = include               # Psana::Opal1k::ConfigV1
 Orca = include                 # Psana::Orca::ConfigV1
@@ -132,6 +133,7 @@ SharedIpimb = include          # Psana::Bld::BldDataIpimbV0, Psana::Bld::BldData
 SharedPim = include            # Psana::Bld::BldDataPimV1
 Spectrometer = include         # Psana::Bld::BldDataSpectrometerV0
 TM6740 = include               # Psana::Pulnix::TM6740ConfigV1, Psana::Pulnix::TM6740ConfigV2
+TimeTool = include             # Psana::TimeTool::ConfigV1, Psana::TimeTool::DataV1
 Timepix = include              # Psana::Timepix::ConfigV1, Psana::Timepix::ConfigV2, Psana::Timepix::ConfigV3, Psana::Timepix::DataV1, Psana::Timepix::DataV2
 TwoDGaussian = include         # Psana::Camera::TwoDGaussianV1
 UsdUsb = include               # Psana::UsdUsb::ConfigV1, Psana::UsdUsb::DataV1
